--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
     "@mui-treasury/styles": "^1.13.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.20",
     "axios": "^0.27.1",
     "draft-js": "^0.11.7",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-mui-dialog": "^0.3.2",
     "react-player": "^2.10.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-time-format": "^0.0.5",
     "react-window": "^1.8.7",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
